[Feature]: Filling another branch

--- a/cmsproject/cmsapp/templates/cmsapp/landingpage.html
+++ b/cmsproject/cmsapp/templates/cmsapp/landingpage.html
@@ -77,9 +77,7 @@
                 <div>
                     <p>Further <span>Your</span> Effort <br><span>Using</span> WebBuildr.</p>
                     <p>The easiest and fastest way to build your website. <br> No coding,Zero charges</p>
-                    <button onclick="() => {
-                        window.location.replace('{% url 'account:signup' %}')
-                    }">GET STARTED</a></button>
+                    <button onclick="getStarted()">GET STARTED</a></button>
                     
                 </div>
                 
@@ -284,7 +282,7 @@
             <div class="call-to-action__container">
                 <h2 class="call-to-action__h2">yup!!! you are in the right place</h2>
                 <p class="call-to-action__p">WebBuildr enables you to create,edit,collaborate on, publish and store digital content without the help of developers. You do not need a technical skill or knowledge, it’s all made easy using WebBuildr the fastest way to kick start a managable future.</p>
-                <a href="#" class="call-to-action-btn">Create a website for free</a>
+                <a href="{% url 'account:signup' %}" class="call-to-action-btn">Create a website for free</a>
             </div>
         </section>
         <!-- faq -->
@@ -377,4 +375,7 @@
 
 <script>
     AOS.init();
+    function getStarted() {
+        window.location.replace("{% url 'account:signup' %}")
+    }
   </script>
