--- a/cmsapp/templates/cmsapp/index.html
+++ b/cmsapp/templates/cmsapp/index.html
@@ -1,7 +1,7 @@
-<<<<<<< HEAD
+
 {% load static %}
-=======
->>>>>>> 7024a0db0861a5adfedc183dea16236ef6bdbad9
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,10 +58,12 @@
                 <li>Hire an expert</li>
             </ul>
 
+            {%comment%}
             <div class="nav-btns">
-                <button> <a href="{% url 'account:login' %}">LOG IN</a></button>
-                <button> <a href="{% url 'account:signup' %}">GET STARTED</a></button>
+                <button> <a href="{% url 'accounts:login' %}">LOG IN</a></button>
+                <button> <a href="{% url 'accounts:signup' %}">GET STARTED</a></button>
             </div>
+        {%endcomment%}
         </nav>
     </header>
 <!-- ---------------------------------------------------------------------------- -->
@@ -76,7 +78,9 @@
                 <div>
                     <p>Further <span>Your</span> Effort <br><span>Using</span> WebBuildr.</p>
                     <p>The easiest and fastest way to build your website. <br> No coding,Zero charges</p>
+            {%comment%}
                     <button><a href="{% url 'account:signup' %}"></a>GET STARTED</a></button>
+                    {%endcomment%}
                     
                 </div>
                 
