[Feature]: Google Authentication for login and signup

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,7 +29,7 @@
             </div>
             <div class="google-sign-wrapper">
               <div class="google-sign-in" title="This is just for design purposes">
-                <a href="#"
+                <a href="{% provider_login_url 'google' %}"
                   ><img src="{% static 'signin/assets/google-logo.svg' %}" alt="google-logo"
                 /></a>
               </div>
@@ -55,7 +56,7 @@
             </div>
             <div class="signin-options">
               <p>
-                <a href="{% url 'account:signup' %}">Don't Have an Account?</a>
+                <a href="{% url 'accounts:signup' %}">Don't Have an Account?</a>
               </p>
               <p>
                 <a href="#">Forgot password?</a>
