[Fix]: Resolved url mapping error

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -80,7 +80,7 @@
       el.setAttribute('style', "background-color: #242653; color: white");
     }
     function homepage() {
-      window.location.replace('{% url "landingpage" %}')
+      window.location.replace('{% url "cmsapp:landingpage" %}')
     }
   </script>
 </html>
