--- a/template/registerPage/register.html
+++ b/template/registerPage/register.html
@@ -32,12 +32,13 @@
                 alt=""
               />
             </button>
-            <button class="form-action-btn">
+            <button class="form-action-btn apple-btn">
               <img
                 src="./assets/appleLogo.svg"
                 class="form-action-apple-logo"
                 alt=""
               />
+              <p>Continue with Apple</p>
             </button>
           </div>
           <p class="or">or</p>
@@ -95,6 +96,11 @@
               Policy and Terms of Service.
             </p>
           </div>
+          <hr />
+          <footer class="register-form-footer mobile">
+            <p>Already have an account?</p>
+            <a href="">Login Here</a>
+          </footer>
         </div>
       </div>
     </main>
