--- a/template/registerConfirmation/registerConf.html
+++ b/template/registerConfirmation/registerConf.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/x-icon" href="../images/webBuildr.png" />
+
     <link
       rel="preload"
       href="../webkit-campton/camptonextrabold-webfont.woff"
@@ -17,16 +19,15 @@
         <img src="../images/nav/logo.svg" alt="logo" />
       </div>
       <div class="tmp">
-          <div class="confirm-wrapper">
-              <div class="confirm-img-wrap">
-                  
-                  <img src="./assets/verified.svg" alt="" class="verified-svg-img"/>
-                </div>
-                <div class="confirm-btn-wrap">
-                    <a href="#" class="confirm-btn"> Resend Email </a>
-                </div>
-            </div>
+        <div class="confirm-wrapper">
+          <div class="confirm-img-wrap">
+            <img src="./assets/verified.svg" alt="" class="verified-svg-img" />
+          </div>
+          <div class="confirm-btn-wrap">
+            <a href="#" class="confirm-btn"> Resend Email </a>
+          </div>
         </div>
+      </div>
     </main>
   </body>
 </html>
