--- a/template/404/404.html
+++ b/template/404/404.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" type="image/x-icon" href="../images/webBuildr.png" />
+
     <link rel="stylesheet" href="./404.css" />
     <title>404 | Page not found</title>
   </head>
