--- a/template/signinPage/sign.css
+++ b/template/signinPage/sign.css
@@ -167,15 +167,20 @@
 }
 
 @media screen and (min-width: 296px) and (max-width: 768px) {
+  .grid-logo {
+    display: flex;
+    justify-content: center;
+  }
   .sign-grid {
     flex-direction: column;
+    margin: 2rem 0;
   }
   .signin-gridbox {
     height: 100%;
     width: 100%;
   }
-  
-  .sigin-information{
+
+  .sigin-information {
     background-color: transparent;
     padding: 1rem;
   }
@@ -190,7 +195,7 @@
     font-size: 20px;
   }
 
-  .signin-wrapper{
+  .signin-wrapper {
     margin: 0;
   }
 }
