--- a/template/signinPage/signin.html
+++ b/template/signinPage/signin.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="Welcome back" />
+    <link rel="icon" type="image/x-icon" href="../images/webBuildr.png">
+
     <meta name="keywords" content="signin, signup, login, register" />
     <link
       rel="stylesheet"
