--- a/template/templates_folder/templates.css
+++ b/template/templates_folder/templates.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+i {
+    cursor: pointer;
+}
+
 a {
     text-decoration: none;
 }
@@ -87,6 +91,14 @@ hr {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 16px;
+}
+.cat__item {
+    cursor: pointer;
+}
+
+.cat__item:hover {
+    transform: scale(1.05);
+    transition: .3s ease-in-out;
 }
 
 .cat__item img {
@@ -170,7 +182,20 @@ hr {
 .template__item {
     width: 350.17px;
     height: 536px;
+    border-radius: 10px;
+}
 
+.template__item img {
+    border-radius: 10px;
+    cursor: pointer;
+    opacity: .9;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 75px 50px rgba(74, 72, 72, 0.1));
+}
+
+.template__item:hover {
+    opacity: 1;
+    transform: scale(1.05);
+    transition: .3s ease-in-out;
 }
 
 .templates__item-text {
@@ -178,7 +203,7 @@ hr {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top: 8px;
+    margin: 5px 10px;
 }
 
 /* Footer section */
