--- a/template/templates_folder/index.html
+++ b/template/templates_folder/index.html
@@ -19,10 +19,29 @@
                 <a href="#">Template</a>
                 <a href="#">Resource</a>
             </div>
+            <div class="mobile__menu">
+                <i class="bi bi-list"></i>
+            </div>
         </div>
     </header>
-    <hr>
+    <hr class="hr-1">
     <main>
+        <section class="mobile__hero hidden">
+            <div class="container">
+                <h2>Make any template yours with ease.</h2>
+                <div class="mobile__hero-btn">
+                    <a href="#" class="filter">
+                        <i class="bi bi-funnel"></i>
+                        <span>Filter</span>
+                    </a>
+                    <div class="bar"></div>
+                    <a href="#" class="favorite">
+                        <i class="bi bi-heart"></i>
+                        <span>Favorite</span>
+                    </a>
+                </div>
+            </div>
+        </section>
         <section class="categories">
             <div class="cat__container">
                 <div class="cat__item">
@@ -198,6 +217,40 @@
                 <p><a href="#">upcoming webinar</a></p>
             </div>
         </div>
-    </footer>
+        <div class="mobile__footer">
+            <div class="container">
+                <div class="footer__item-list">
+                    <div class="footer__item">
+                        <h3>Product</h3>
+                        <i class="bi bi-chevron-down"></i>
+                    </div>
+                    <div class="footer__item">
+                        <h3>Community</h3>
+                        <i class="bi bi-chevron-down"></i>
+                    </div>
+                    <div class="footer__item">
+                        <h3>Features</h3>
+                        <i class="bi bi-chevron-down"></i>
+                    </div>
+                    <div class="footer__item">
+                        <h3>Follow</h3>
+                        <i class="bi bi-chevron-down"></i>
+                    </div>
+                    <div class="footer__item">
+                        <h3>Resourses</h3>
+                        <i class="bi bi-chevron-down"></i>
+                    </div>
+                </div>
+                <div class="footer__btn">
+                    <a href="">
+                        <span>English</span>
+                        <i class="bi bi-chevron-down"></i>
+                    </a>
+                </div>
+                <div class="footer__logo">
+                    <img src="./images/footer__logo.png" alt="">
+                </div>
+            </div>
+        </div>
 </body>
 </html>
