--- a/cmsapp/templates/cmsapp/templates.html
+++ b/cmsapp/templates/cmsapp/templates.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="../images/webBuildr.png" />
+    <link rel="icon" type="image/x-icon" href="{% static 'images/webBuildr.png' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{% static 'templates_folder/templates.css' %}">
     <title>WebBuildr | Templates page</title>
@@ -46,23 +46,23 @@
         <section class="categories">
             <div class="cat__container">
                 <div class="cat__item">
-                    <img src="./images/categories/blog.png" alt="">
+                    <img src="{% static 'templates_folder/images/categories/blog.png' %}" alt="">
                     <h3>Blog</h3>
                 </div>
                 <div class="cat__item">
-                    <img src="./images/categories/ecommerce.png" alt="">
+                    <img src="{% static 'templates_folder/images/categories/ecommerce.png' %}" alt="">
                     <h3>Ecommerce</h3>
                 </div>
                 <div class="cat__item">
-                    <img src="./images/categories/portfolio__.png" alt="">
+                    <img src="{% static 'templates_folder/images/categories/portfolio__.png' %}" alt="">
                     <h3>Portfolio</h3>
                 </div>
                 <div class="cat__item">
-                    <img src="./images/categories/resturant.png" alt="">
+                    <img src="{% static 'templates_folder/images/categories/resturant.png' %}" alt="">
                     <h3>Resturant</h3>
                 </div>
                 <div class="cat__item">
-                    <img src="./images/categories/landing.png" alt="">
+                    <img src="{% static 'templates_folder/images/categories/landing.png' %}" alt="">
                     <h3>Landing Page</h3>
                 </div>
             </div>
@@ -110,63 +110,63 @@
                 <h2>All Templates</h2>
                 <div class="template__grid">
                     <div class="template__item">
-                        <img src="./images/templates/inyang.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/inyang.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Inyang</h3>
                             <i class="bi bi-heart"></i>
                         </div>
                     </div>
                     <div class="template__item">
-                        <img src="./images/templates/pams.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/pams.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Pams</h3>
                             <i class="bi bi-heart"></i>
                         </div>
                     </div>
                     <div class="template__item">
-                        <img src="./images/templates/chad.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/chad.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Chad</h3>
                             <i class="bi bi-heart"></i>
                         </div>
                     </div>
                     <div class="template__item">
-                        <img src="./images/templates/glams.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/glams.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Glams</h3>
                             <i class="bi bi-heart"></i>
                         </div>
                     </div>
                     <div class="template__item">
-                        <img src="./images/templates/olive.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/olive.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Olive</h3>
                             <i class="bi bi-heart"></i>
                         </div>
                     </div>
                     <div class="template__item">
-                        <img src="./images/templates/seren.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/seren.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Seren</h3>
                             <i class="bi bi-heart"></i>
                         </div>
                     </div>
                     <div class="template__item">
-                        <img src="./images/templates/clady.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/clady.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Clady</h3>
                             <i class="bi bi-heart"></i>
                         </div>
                     </div>
                     <div class="template__item">
-                        <img src="./images/templates/jayn.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/jayn.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Jayn</h3>
                             <i class="bi bi-heart"></i>
                         </div>
                     </div>
                     <div class="template__item">
-                        <img src="./images/templates/pedro.png" alt="">
+                        <img src="{% static 'templates_folder/images/templates/pedro.png' %}" alt="">
                         <div class="templates__item-text">
                             <h3>Pedro</h3>
                             <i class="bi bi-heart"></i>
@@ -249,7 +249,7 @@
                     </a>
                 </div>
                 <div class="footer__logo">
-                    <img src="./images/footer__logo.png" alt="">
+                    <img src="{% static 'templates_folder/images/footer__logo.png' %}" alt="">
                 </div>
             </div>
         </div>
