--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -52,7 +52,7 @@
                   type="text"
                   name="first_name"
                   id="firstname"
-                  placeholder="first name"
+                  placeholder="First Name"
                 />
               </div>
               <div class="form-group">
@@ -62,7 +62,7 @@
                   type="text"
                   name="last_name"
                   id="lastname"
-                  placeholder="last name"
+                  placeholder="Last Name"
                 />
               </div>
             </div>
@@ -85,7 +85,7 @@
                   type="text"
                   name="username"
                   id="email"
-                  placeholder="Email"
+                  placeholder="Username"
                 />
               </div>
             </div>
