[fix]: Trying to fix

--- a/cmsapp/templates/cmsapp/landingpage.html
+++ b/cmsapp/templates/cmsapp/landingpage.html
@@ -348,7 +348,7 @@
                 </div>
                 <div class="col">
                     <h3>Features</h3>
-                    <p><a href="#">Template</a></p>
+                    <p><a href="{% url 'cmsapp:templates_page' %}">Template</a></p>
                     <p><a href="#">Hosting</a></p>
                     <p><a href="#">Interaction</a></p>
                     <p><a href="#">Logo Maker</a></p>
